# smoke-test-ai

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt
config/: build_info_sample.json  build_info_userdebug.json  settings.yaml
config/devices/: product_a.yaml
config/setup_flows/: product_a.yaml
config/test_suites/: battery_life.yaml  bluetooth_advanced.yaml  smoke_basic.yaml  wifi_advanced.yaml
docs/plans/: 2026-02-28-smoke-test-ai-design.md  2026-02-28-smoke-test-ai-implementation.md  2026-03-01-expanded-snippet-tests-design.md  2026-03-01-functional-test-plugin-design.md  2026-03-01-functional-test-plugin-implementation.md  2026-03-03-blind-setup-runner-design.md  2026-03-03-blind-setup-runner.md  2026-03-04-test-quality-implementation.md  2026-03-04-test-quality-improvement-design.md  2026-03-11-charging-detection-test-design.md  2026-03-11-charging-detection-test-plan.md  2026-03-11-uhubctl-usb-power-control-design.md  2026-03-11-uhubctl-usb-power-control-implementation.md  2026-03-13-adaptive-pipeline-design.md  2026-03-14-adaptive-pipeline-implementation.md
scripts/: install.sh  test_new_plugins_on_dut.py  verify_aoa.py
smoke_test_ai/ai/: llm_client.py  setup_wizard_agent.py  visual_analyzer.py
templates/: report.html  test_plan.html
tests/: conftest.py  test_adb_controller.py  test_ai.py  test_aoa_hid.py  test_blind_runner.py  test_flash.py  test_orchestrator.py  test_plugins.py  test_reporting.py  test_runner.py  test_screen_capture.py  test_setup_wizard.py  test_usb_power.py  test_usb_power_serial.py  test_utils.py
(+30 files in other folders)
