[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smoke-test-ai"
version = "0.1.0"
description = "Android OS image smoke test automation framework"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pyusb>=1.2",
    "opencv-python-headless>=4.8",
    "httpx>=0.25",
    "jinja2>=3.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]
pdf = [
    "weasyprint>=60.0",
]

[project.scripts]
smoke-test = "cli:main"

[tool.setuptools.packages.find]
include = ["smoke_test_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
